...
      <Stack.Screen options={{ title: "Detalle del Reporte" }} />

      <Image source={{ uri: reporte.imagenUrl }} style={styles.image} />
      
      <View style={styles.content}>
        <View style={styles.card}>
          <Text style={styles.cardTitle}>Resumen del Reporte</Text>
          <Text style={styles.cardRow}><Text style={styles.label}>Tipo: </Text>{reporte.tipo}</Text>
          <Text style={styles.cardRow}>
            <Text style={styles.label}>Estado: </Text>
            <Text style={{ color: getStatusColor(), fontWeight: 'bold' }}>
              {reporte.status}
            </Text>
...
        <View style={styles.card}>
          <Text style={styles.cardTitle}>Descripción</Text>
          <Text>{reporte.descripcion}</Text>
        </View>

        <View style={styles.card}>
          <Text style={styles.cardTitle}>Ubicación</Text>
          <MapView
            style={styles.map}
            initialRegion={{
              latitude: reporte.ubicacion.latitude,
              longitude: reporte.ubicacion.longitude,
              latitudeDelta: 0.005,
...
