...
                month: "2-digit",
              })}
            </Text>
          </TouchableOpacity>
        )}
        ListEmptyComponent={
          <Text style={styles.emptyText}>No tienes avisos.</Text>
        }
      />
    </View>
  );
}

...
